feat(ui): add dark mode theme   support
Signed-off-by: Mikael Sundberg <mikael.sundberg82@gmail.com>

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -33,7 +33,7 @@ body,
 
 .MuiAppBar-root {
   height: 6rem;
-  background: linear-gradient(90deg, #00254A 2.77%, #3492EF 105.54%) !important;
+  background: var(--appbar-gradient) !important;
 }
 
 .MuiToolbar-root {
