--- a/ui/src/components/common/SlidingSidebar/partials/CloseModal/style.css
+++ b/ui/src/components/common/SlidingSidebar/partials/CloseModal/style.css
@@ -3,7 +3,7 @@
 }
 
 .close-modal-message {
-  color: #000;
+  color: var(--text-primary);
   font-size: 2rem;
   font-style: normal;
   font-weight: 400;
