--- a/ui/src/components/common/SlidingSidebar/partials/GeneratorDetails/style.css
+++ b/ui/src/components/common/SlidingSidebar/partials/GeneratorDetails/style.css
@@ -1,34 +1,34 @@
 .vertex-details-header-text {
-    font-size: 2rem;
-    font-style: normal;
-    font-weight: 500;
-    margin-left: 1.6rem;
-  }
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 500;
+  margin-left: 1.6rem;
+}
 
 .vertex-details-header-icon {
-    width: 3.6rem;
+  width: 3.6rem;
 }
 
 .vertex-details-tab-panel {
-    height: 100%;
+  height: 100%;
 }
 
 .vertex-details-tab.MuiTab-root {
-    font-size: 1.4rem !important;
-    font-style: normal !important;
-    font-weight: 600 !important;
-    color: #6B6C72 !important;
-    text-transform: none !important;
+  font-size: 1.4rem !important;
+  font-style: normal !important;
+  font-weight: 600 !important;
+  color: var(--text-tertiary) !important;
+  text-transform: none !important;
 }
 
 .vertex-details-tab-selected.MuiTab-root {
-    font-size: 1.4rem !important;
-    font-style: normal !important;
-    font-weight: 600 !important;
-    color: #393A3D !important;
-    text-transform: none !important;
+  font-size: 1.4rem !important;
+  font-style: normal !important;
+  font-weight: 600 !important;
+  color: var(--text-primary) !important;
+  text-transform: none !important;
 }
 
 .vertex-details-tabs > .MuiTabs-scroller > .MuiTabs-indicator {
-    background-color: #037C8F !important;
+  background-color: #037C8F !important;
 }
