--- a/ui/src/components/pages/Namespace/partials/MonoVertexCard/style.css
+++ b/ui/src/components/pages/Namespace/partials/MonoVertexCard/style.css
@@ -1,10 +1,10 @@
 .pipeline-card-name {
-    font-size: 2rem;
-    font-style: normal;
-    font-weight: 400;
-    color: #000;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 400;
+  color: var(--text-primary);
 }
 
 .pipeline-card-icon {
-    width: 2.4rem;
+  width: 2.4rem;
 }
