--- a/ui/src/components/pages/Pipeline/partials/PipelineISBStatus/style.css
+++ b/ui/src/components/pages/Pipeline/partials/PipelineISBStatus/style.css
@@ -1,5 +1,5 @@
 .isb-status-subtitle {
-    color: #3C4348;
+    color: var(--text-secondary);
     font-size: 1.4rem;
     font-style: normal;
     font-weight: 600;
@@ -7,7 +7,7 @@
 }
 
 .isb-status-text {
-    color: #393A3D;
+    color: var(--text-primary);
     font-size: 1.4rem;
     font-style: normal;
     font-weight: 400;
