--- a/ui/src/components/pages/Pipeline/partials/PipelineSummaryStatus/style.css
+++ b/ui/src/components/pages/Pipeline/partials/PipelineSummaryStatus/style.css
@@ -1,5 +1,5 @@
 .pipeline-summary-text {
-    color: #393A3D;
+    color: var(--text-primary);
     font-size: 1.4rem;
     font-style: normal;
     font-weight: 400;
@@ -11,7 +11,7 @@
 }
 
 .pipeline-onclick-events {
-    color: #393A3D;
+    color: var(--accent-primary);
     font-size: 1.4rem;
     font-style: normal;
     font-weight: 600;
