--- a/ui/src/components/pages/Pipeline/style.css
+++ b/ui/src/components/pages/Pipeline/style.css
@@ -3,12 +3,19 @@
 }
 
 .react-flow__edge-textbg {
-    fill: #fafafa;
+    fill: var(--bg-tertiary);
 }
 
 .pipeline-status-title {
     font-weight: 600;
-    color: #393A3D;
+    color: var(--text-primary);
     font-size: 1.3rem;
     font-style: normal;
+}
+
+.namespace-k8s-events {
+    color: var(--accent-primary);
+    font-size: 1.4rem;
+    font-weight: 600;
+    cursor: pointer;
 }
