minor improvements for dark theme
Signed-off-by: adarsh0728 <gooneriitk@gmail.com>

--- a/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/partials/CollapsableError/style.css
+++ b/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/partials/CollapsableError/style.css
@@ -14,7 +14,7 @@
 .collapsable-error-common-title-text {
   height: 100%;
   font-weight: 500;
-  color: #878789;
+  color: var(--text-secondary);
   word-break: break-word;
 }
 
@@ -26,7 +26,7 @@
 
 .collapsable-error-accordion-details-box {
   display: flex;
-  background: #f4f5f8;
+  background: var(--bg-secondary);
   width: 100%;
   height: 100%;
   padding: 2rem 0;
@@ -35,7 +35,7 @@
 
 .collapsable-error-accordion-details-title {
   font-weight: 500;
-  color: #878789;
+  color: var(--text-secondary);
 }
 
 .collapsable-error-accordion-details-title-content {
